--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,26 +1,26 @@
 basic_settings:
-  site_title: Duet
-  favicon_image: /images/favicon.png
+  site_title: Anup S
+  favicon_image: /images/facelogo.svg
 
 header_settings:
-  logo_image: 
-  logo_width: 200
+  logo_image: /images/facelogo.svg
+  logo_width: 80
 
 menu_settings:
   menu_items:
     - title: 'Projects'
       url: '/'
     - title: 'Blog'
-      url: '/blog/'
-    - title: 'About'
-      url: '/about'
-    - title: 'Contact'
-      url: '/contact'
+      url: 'https://medium.com/@anupsathya'
+    - title: 'Resume'
+      url: 'https://drive.google.com/open?id=1_IiBGC99fCZ0N91DzDkMUpFN6mLAEggL'
+    - title: 'Research'
+      url: '/research/'
 
 footer_settings:
-  logo_image: 
-  logo_width: 200
-  footer_tagline: A beautiful, minimal two-column portfolio Jekyll theme
+  logo_image: /images/facelogo.svg
+  logo_width: 80
+  footer_tagline:
 
 grid_settings:
   overlay_opacity: 0.8
@@ -33,9 +33,9 @@ contact_settings:
   send_button_text: 'Send Message'
 
 social_settings:
-  facebook_url: 'https://www.facebook.com/jekyllthemes/'
-  twitter_url: 'https://twitter.com/jekyllthemesio'
-  instagram_url: 'http://instagram.com'
+  facebook_url: ''
+  twitter_url: ''
+  instagram_url: ''
   snapchat_url: ''
   youtube_url: ''
   google-plus_url: ''
@@ -46,19 +46,19 @@ social_settings:
   amazon_url: ''
   apple_url: ''
   android_url: ''
-  tumblr_url: 'http://tumblr.com'
-  dribbble_url: 'http://dribbble.com'
+  tumblr_url: ''
+  dribbble_url: ''
   behance_url: ''
   deviantart_url: ''
-  github_url: ''
+  github_url: 'https://github.com/anupsathya'
   reddit_url: ''
   flickr_url: ''
   etsy_url: ''
   kickstarter_url: ''
   soundcloud_url: ''
-  spotify_url: ''
+  spotify_url: 'https://open.spotify.com/user/anupsathya?si=A10c31v8QASyUp4NLzigeA'
   bandcamp_url: ''
-  linkedin_url: ''
+  linkedin_url: 'https://www.linkedin.com/in/anupsathya/'
 
 color_settings:
   background_color: '#ffffff'
