--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,7 +15,7 @@ menu_settings:
     - title: 'Resume'
       url: 'https://drive.google.com/open?id=1_IiBGC99fCZ0N91DzDkMUpFN6mLAEggL'
     - title: 'Research'
-      url: '/research/'
+      url: '/research'
 
 footer_settings:
   logo_image: /images/facelogo.svg
