--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,7 +15,7 @@ menu_settings:
     - title: 'Research'
       url: '/research'
     - title: 'Email'
-      url: 'mailto:anup.bethany@gmail.com'
+      url: 'http://mailto:anup.bethany@gmail.com'
 
 footer_settings:
   logo_image: /images/facelogo.svg
