--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -59,7 +59,7 @@ social_settings:
   linkedin_url: 'https://www.linkedin.com/in/anupsathya/'
 
 color_settings:
-  background_color: '#ffffff'
+  background_color: '#f1f1f1'
   background_alt_color: '#f4f5f6'
   text_dark_color: '#2A2F36'
   text_medium_color: '#6C7A89'
