--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -44,7 +44,7 @@ social_settings:
   android_url: ''
   tumblr_url: ''
   dribbble_url: ''
-  behance_url: ''
+  behance_url: 'https://www.behance.net/anupsathya'
   deviantart_url: ''
   github_url: 'https://github.com/anupsathya'
   reddit_url: ''
